Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DAS_APAC_Japan_Dealer_Other__c.field-meta.xml
<CustomField>
    <fullName>DAS_APAC_Japan_Dealer_Other__c</fullName>
    <label>Japan Dealer Other</label>
    <length>60</length>
    <type>Text</type>
</CustomField>