Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DAS_APAC_Japan_Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>DAS_APAC_Japan_Dealer_Type__c</fullName>
    <description>Indicates if it is a EH and LST dealer.</description>
    <inlineHelpText>Select dealer type</inlineHelpText>
    <label>Japan Dealer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>