Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Date_Bid_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Bid_Posted__c</fullName>
    <description>Date which the bid became available from the customer</description>
    <label>Bid Posted Date</label>
    <type>Date</type>
</CustomField>