Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Date_Bid_Terms_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Bid_Terms_Reviewed__c</fullName>
    <description>Date the review document was received back from the contract review team</description>
    <label>Bid Terms Review Date</label>
    <type>Date</type>
</CustomField>