Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Date_Entered_SAP__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_SAP__c</fullName>
    <label>Date Entered SAP</label>
    <type>Date</type>
</CustomField>