Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Date_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Closed__c</fullName>
    <description>Captures that actual date the Opportunity Stage was set to Closed/Won or Closed/Lost.</description>
    <inlineHelpText>The actual date the Opportunity Stage was set to Closed/Won or Closed/Lost.</inlineHelpText>
    <label>Date Opportunity Closed</label>
    <type>Date</type>
</CustomField>