Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Stage_Change__c</fullName>
    <description>Counts the number of days since the Opportunity Stage was last changed.</description>
    <formula>IF(
 ISBLANK( Date_Opportunity_Closed__c ) ,
 TODAY() -  Last_Stage_Change_Date__c , 
 Date_Opportunity_Closed__c -  Last_Stage_Change_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counts the number of days since the Opportunity Stage was last changed.</inlineHelpText>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>