Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Desk</label>
    <referenceTo>Deal_Desk__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>