Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Deal_Desk_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Status__c</fullName>
    <label>Deal Desk Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>