Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dealer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Approval_Status__c</fullName>
    <label>Approval Status (Dealers)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending_For_Approval</fullName>
                <label>Pending For Approval</label>
            </value>
            <value>
                <fullName>Not_Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>