Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dealer_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealerOpportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>