Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dealer_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealerOpportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>