Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dealer_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealerOpportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>