Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dealer_Portal_Opp__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Portal_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Portal Opp</label>
    <type>Checkbox</type>
</CustomField>