Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Deep_Dive_scheduled__c.field-meta.xml
<CustomField>
    <fullName>Deep_Dive_scheduled__c</fullName>
    <label>Deep Dive scheduled</label>
    <type>Date</type>
</CustomField>