Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DegreeUrgencyNum__c.field-meta.xml
<CustomField>
    <fullName>DegreeUrgencyNum__c</fullName>
    <formula>if(ispickval( Degree_of_Urgency__c,&quot;High. Prospect must buy this month&quot;),30,if(ispickval( Degree_of_Urgency__c,&quot;Medium. Prospect will likely buy this month&quot;),20,if(ispickval( Degree_of_Urgency__c,&quot;Low. Prospect may decide to buy now&quot;),10,if(ispickval( Degree_of_Urgency__c,&quot;No sense of urgency to buy now&quot;),0,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DegreeUrgencyNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>