Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Delivery_Contact_Email_INF__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Email_INF__c</fullName>
    <formula>Delivery_Contact_INF__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Contact Email</label>
    <type>Text</type>
</CustomField>