Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Did_you_FUP_with_the_rep_on_the_status__c.field-meta.xml
<CustomField>
    <fullName>Did_you_FUP_with_the_rep_on_the_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you FUP with the rep on the status?</label>
    <type>Checkbox</type>
</CustomField>