Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DMQL__c.field-meta.xml
<CustomField>
    <fullName>DMQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMQL</label>
    <type>Checkbox</type>
</CustomField>