Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Does_opportunity_come_from_PKI_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Does_opportunity_come_from_PKI_Marketing__c</fullName>
    <label>Does Opp. come from PKI Marketing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>