Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Dx_APAC_Stage__c.field-meta.xml
<CustomField>
    <fullName>Dx_APAC_Stage__c</fullName>
    <label>New Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Stage 1 - Create/Plan</fullName>
            </value>
            <value>
                <fullName>Stage 2 - Qualify</fullName>
            </value>
            <value>
                <fullName>Stage 3 - Develop</fullName>
            </value>
            <value>
                <fullName>Stage 4 - Prove</fullName>
            </value>
            <value>
                <fullName>Stage 5 - Negotiate</fullName>
            </value>
            <value>
                <fullName>Stage 6 - Implement</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Stage 1 - Qualification</fullName>
                <isActive>false</isActive>
                <label>Stage 1 - Qualification</label>
            </value>
            <value>
                <fullName>Stage 2 - Needs Analysis</fullName>
                <isActive>false</isActive>
                <label>Stage 2 - Needs Analysis</label>
            </value>
            <value>
                <fullName>Stage 3 - Solution Differentiation</fullName>
                <isActive>false</isActive>
                <label>Stage 3 - Solution Differentiation</label>
            </value>
            <value>
                <fullName>Stage 4 - Objection Handling</fullName>
                <isActive>false</isActive>
                <label>Stage 4 - Objection Handling</label>
            </value>
            <value>
                <fullName>Stage 5 - Preferred</fullName>
                <isActive>false</isActive>
                <label>Stage 5 - Preferred</label>
            </value>
            <value>
                <fullName>Stage 6 - Negotiating/Forecast</fullName>
                <isActive>false</isActive>
                <label>Stage 6 - Negotiating/Forecast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>