Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DX_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Opportunity_Type__c</fullName>
    <label>Opportunity Type (DX)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capex Sales</fullName>
            </value>
            <value>
                <fullName>Reagents Rental Package</fullName>
            </value>
            <value>
                <fullName>Standard Run Rate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
                <isActive>false</isActive>
                <label>Package</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>