Perkin-UAT/force-app/main/default/objects/Opportunity/fields/DXOPPSTOUPDATE__c.field-meta.xml
<CustomField>
    <fullName>DXOPPSTOUPDATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DXOPPSTOUPDATE</label>
    <type>Checkbox</type>
</CustomField>