Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000000JDZu&quot;, &quot;Edit&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>