Perkin-UAT/force-app/main/default/objects/Opportunity/fields/EH_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>EH_Customer_Type__c</fullName>
    <description>Customer Type</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>