Perkin-UAT/force-app/main/default/objects/Opportunity/fields/EH_Global_Campaign__c.field-meta.xml
<CustomField>
    <fullName>EH_Global_Campaign__c</fullName>
    <description>EH 2015 Global Campaign</description>
    <label>Global Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food Authenticity and Provenance</fullName>
            </value>
            <value>
                <fullName>Nutritional Elemental Analysis</fullName>
            </value>
            <value>
                <fullName>Industrial Materials</fullName>
            </value>
            <value>
                <fullName>Air pollution link to public Health</fullName>
            </value>
            <value>
                <fullName>Nano material characterization</fullName>
            </value>
            <value>
                <fullName>USP 232/233 Compliance</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>