Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Email_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track the Email Invoice which we are sending to Netsuite. (ITSFDC-5103)</description>
    <inlineHelpText>This field is used to track the Email Invoice which we are sending to Netsuite. (ITSFDC-5103)</inlineHelpText>
    <label>Email Invoice</label>
    <type>Checkbox</type>
</CustomField>