Perkin-UAT/force-app/main/default/objects/Opportunity/fields/End_User_Country__c.field-meta.xml
<CustomField>
    <fullName>End_User_Country__c</fullName>
    <description>replaced by lookup field of similar name</description>
    <label>End User Country (Pick)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_025_Territory_Country</valueSetName>
    </valueSet>
</CustomField>