Perkin-UAT/force-app/main/default/objects/Opportunity/fields/End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name__c</fullName>
    <inlineHelpText>Please fill in End Users Name with &quot;/&quot; and End Users Phone Number</inlineHelpText>
    <label>End User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>