Perkin-UAT/force-app/main/default/objects/Opportunity/fields/EndUserCountry__c.field-meta.xml
<CustomField>
    <fullName>EndUserCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please start typing a country name and select the one you want</inlineHelpText>
    <label>End User Country</label>
    <referenceTo>PKI_Country__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>DealerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>