Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Entitlement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_End_Date__c</fullName>
    <formula>/*Service_Case__r.Entitlement_End_Date__c*/
null</formula>
    <label>Entitlement End Date</label>
    <type>Date</type>
</CustomField>