Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <formula>/*Service_Case__r.Entitlement_Status__c*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Status</label>
    <type>Text</type>
</CustomField>