Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <formula>/*Service_Case__r.PKI_Entitlement_Type__c*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Type</label>
    <type>Text</type>
</CustomField>