Perkin-UAT/force-app/main/default/objects/Opportunity/fields/ERP_ID_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID_Opportunity__c</fullName>
    <label>ERP ID (Opportunity)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>