Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Estimated_Resources__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Resources__c</fullName>
    <inlineHelpText>Estimated Resources</inlineHelpText>
    <label>Estimated Resources</label>
    <type>TextArea</type>
</CustomField>