Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Estimated_Revenue_from_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue_from_Instruments__c</fullName>
    <description>To store the estimated revenue from instruments (Source :INC0374409)</description>
    <inlineHelpText>Please fill in the expected instrument revenue.</inlineHelpText>
    <label>Estimated Revenue from Instruments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>