Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Exact_Tender_Conditions_on_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Exact_Tender_Conditions_on_Payment_Terms__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Conditions on Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>