Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Expected_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Ship_Date__c</fullName>
    <description>Expected Product Ship Date</description>
    <inlineHelpText>Product Expected Ship Date, verify from Diver and Back log reports</inlineHelpText>
    <label>Expected Ship Date</label>
    <type>Date</type>
</CustomField>