Perkin-UAT/force-app/main/default/objects/Opportunity/fields/FAPCLR_Rep__c.field-meta.xml
<CustomField>
    <fullName>FAPCLR_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaboration Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>