Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Fcst_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Revenue__c</fullName>
    <inlineHelpText>This field is to be filled by a Sales Manager to assess the risk/upside of an opportunity</inlineHelpText>
    <label>Fcst Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
                <color>#FF0000</color>
                <label>Risk</label>
            </value>
            <value>
                <fullName>Upside</fullName>
                <color>#78C953</color>
                <label>Upside</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>