Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Field_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Completed_Date__c</fullName>
    <description>Date which the field person responsible for the bid response completed and returned it to Customer Care for final submission to the customer</description>
    <label>Bid Response From Field Date</label>
    <type>Date</type>
</CustomField>