Perkin-UAT/force-app/main/default/objects/Opportunity/fields/First_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Sent_Date__c</fullName>
    <label>1st Email Sent Date</label>
    <type>Date</type>
</CustomField>