Perkin-UAT/force-app/main/default/objects/Opportunity/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This Field is required under the &quot;Electronic Delivery Section&quot; when the Opportunity is moved to &quot;Stage-6 &quot; and the details are sent to NetSuite when the Order is processed through integration(ITSFDC-5103)</description>
    <inlineHelpText>Mandatory field, Opportunity cannot be submitted to Stage 6 if blank. The contact in this field will receive a software email notification</inlineHelpText>
    <label>First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>