Perkin-UAT/force-app/main/default/objects/Opportunity/fields/First_Owner_Changed__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked when owner changes</description>
    <label>First Owner Changed</label>
    <type>Checkbox</type>
</CustomField>