Perkin-UAT/force-app/main/default/objects/Opportunity/fields/flagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>flagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field used to allow external systems to trigger an update without actually updating any other fields</description>
    <inlineHelpText>This is a field used to allow external systems to trigger an update without actually updating any other fields</inlineHelpText>
    <label>flagForUpdate</label>
    <type>Checkbox</type>
</CustomField>