Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Food_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Food_Market_Segment__c</fullName>
    <label>Food Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Meat and fish</fullName>
            </value>
            <value>
                <fullName>Food general</fullName>
            </value>
            <value>
                <fullName>Feed &amp; Petfood</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>