Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budgeted</fullName>
                <default>true</default>
                <label>Budgeted</label>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>CFI Application</fullName>
            </value>
            <value>
                <fullName>CFI Awarded</fullName>
            </value>
            <value>
                <fullName>CFI All Monies Received</fullName>
            </value>
            <value>
                <fullName>Grant Application</fullName>
            </value>
            <value>
                <fullName>Grant Awarded</fullName>
            </value>
            <value>
                <fullName>NSERC Application</fullName>
            </value>
            <value>
                <fullName>NSERC Awarded</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Apply for Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Quick Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>