Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Funds_Approval__c.field-meta.xml
<CustomField>
    <fullName>Funds_Approval__c</fullName>
    <label>Funds Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funded to or above our price</fullName>
            </value>
            <value>
                <fullName>High probability of funds approval</fullName>
            </value>
            <value>
                <fullName>Good probability of obtaining funds</fullName>
            </value>
            <value>
                <fullName>Funds not yet available and/or approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>