Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Funds_Avail_Date__c.field-meta.xml
<CustomField>
    <fullName>Funds_Avail_Date__c</fullName>
    <label>Funds Avail. Date</label>
    <type>Date</type>
</CustomField>