Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxAccountGlobalRegion__c.field-meta.xml
<CustomField>
    <fullName>fxAccountGlobalRegion__c</fullName>
    <description>formula to get account global region from account</description>
    <formula>Account.PKI_Global_Region__c</formula>
    <inlineHelpText>formula to get account global region from account</inlineHelpText>
    <label>Account Global Region</label>
    <type>Text</type>
</CustomField>