Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxFlowNotes__c.field-meta.xml
<CustomField>
    <fullName>fxFlowNotes__c</fullName>
    <description>This is a custom field populated by Flows to provide extra detail as needed (i..e Flow error, log time, indecision, step 3, etc)</description>
    <inlineHelpText>This is a custom field populated by Flows to provide extra detail as needed (i..e Flow error, log time, indecision, step 3, etc)</inlineHelpText>
    <label>fxFlowNotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>