Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxHasServicesOnly__c.field-meta.xml
<CustomField>
    <fullName>fxHasServicesOnly__c</fullName>
    <description>This will help for reporting to determine if the opportunity is only service products (which don&#39;t need a renewal)</description>
    <formula>CountofRenewalProducts__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, this Opp only has service products</inlineHelpText>
    <label>fxHasServicesOnly</label>
    <type>Checkbox</type>
</CustomField>