Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxInOwnerGeography__c.field-meta.xml
<CustomField>
    <fullName>fxInOwnerGeography__c</fullName>
    <formula>ISPICKVAL(  Owner.GeographyLevel__c  , &quot;ALL&quot;) ||

AND((ISPICKVAL(  Owner.GeographyLevel__c  , &quot;Country&quot;)), ( TEXT( Owner.GeographyValue__c ) =  Account.PKICountry__r.Name  )) ||

AND((ISPICKVAL( Owner.GeographyLevel__c , &quot;Super Territory&quot;)), ( TEXT( Owner.GeographyValue__c ) = TEXT( Account.PKICountry__r.Super_Territory__c ))) ||

AND((ISPICKVAL( Owner.GeographyLevel__c , &quot;Global territory&quot;)), ( TEXT( Owner.GeographyValue__c ) = TEXT( Account.PKICountry__r.Global_Territory__c ))) 

||

AND((ISPICKVAL( Owner.GeographyLevel__c , &quot;Territory&quot;)), ( TEXT( Owner.GeographyValue__c ) = TEXT( Account.PKICountry__r.Territory__c ))) ||

AND((ISPICKVAL( Owner.GeographyLevel__c , &quot;Sub Territory&quot;)), ( TEXT( Owner.GeographyValue__c ) = TEXT( Account.PKICountry__r.Sub_Territory__c )))</formula>
    <label>fxInOwnerGeography</label>
    <type>Checkbox</type>
</CustomField>