Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxMissingFields_stage0__c.field-meta.xml
<CustomField>
    <fullName>fxMissingFields_stage0__c</fullName>
    <description>fields missing at the current stage</description>
    <formula>IF(
  AND(
        fxRecordTypeName__c =&quot;PKI SPI Sales Process&quot;
      , DATEVALUE(CreatedDate) &gt;= DATE(2021,10,18)
      , CONTAINS(Owner.fxUserAttributes__c,&quot;1000-LDR&quot;)
      , IsConvertedfromLead__c =True
     )
   
  , IF(TEXT(Solution_Area_of_Interest__c)=&quot;&quot;,&quot;•SAI;&quot;,&quot;&quot;)
   &amp; IF(TEXT(Type)=&quot;&quot;,&quot;•Type;&quot;,&quot;&quot;)
   &amp; IF(ISBLANK(Product_Line_Name__c),&quot;•Product Line Name;&quot;,&quot;&quot;)
  
 , &quot;&quot;

 )
 /* Note: What &amp; Why for Description (Long text Field) are handled in P.FLOW_2000*/</formula>
    <inlineHelpText>fields missing at the current stage</inlineHelpText>
    <label>fxMissingFields_stage0</label>
    <type>Text</type>
</CustomField>