Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxMissingFields_stage4__c.field-meta.xml
<CustomField>
    <fullName>fxMissingFields_stage4__c</fullName>
    <description>fields missing at the current stage</description>
    <formula>IF( Quick_Close__c =True, &quot;&quot;,

IF(
 AND(
       IsClosed = False
     , fxStageNumber__c &lt;=4
     
     , OR (
          CloseDate &lt; Today()-31
        , CloseDate &gt; Today()+3650
       )
     )
    ,&#39;•Verify Close Date;&#39;
    ,&quot;&quot;
   ))
/*
&amp; IF(  Territory2Id =&quot;&quot;,&quot;•Territory;&quot;,&quot;&quot;) */</formula>
    <inlineHelpText>fields missing at the current stage</inlineHelpText>
    <label>fxMissingFields_stage4</label>
    <type>Text</type>
</CustomField>