Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxMissingFieldsCurrent__c.field-meta.xml
<CustomField>
    <fullName>fxMissingFieldsCurrent__c</fullName>
    <description>For each stage, show the current missing Fields</description>
    <formula>&quot;fxMissingFields_Current&quot;</formula>
    <inlineHelpText>For each stage, show the current missing Fields</inlineHelpText>
    <label>fxMissingFields_Current</label>
    <type>Text</type>
</CustomField>