Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxMissingFieldsstageAll__c.field-meta.xml
<CustomField>
    <fullName>fxMissingFieldsstageAll__c</fullName>
    <description>The missing fields on this opportunity regardless of current stage</description>
    <inlineHelpText>All the fields needed to be completed on this opportunity (regardless of current stage)</inlineHelpText>
    <label>fxMissingFields_stageAll</label>
    <type>TextArea</type>
</CustomField>