Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxMyOpp__c.field-meta.xml
<CustomField>
    <fullName>fxMyOpp__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxMyOpp</label>
    <type>Checkbox</type>
</CustomField>