Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxPKIGlobalTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKIGlobalTerritory__c</fullName>
    <formula>TEXT( EndUserCountry__r.Global_Territory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxPKIGlobalTerritory</label>
    <type>Text</type>
</CustomField>