Perkin-UAT/force-app/main/default/objects/Opportunity/fields/fxPKISubTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISubTerritory__c</fullName>
    <formula>TEXT(EndUserCountry__r.Sub_Territory__c)</formula>
    <label>fxPKISubTerritory</label>
    <type>Text</type>
</CustomField>